# rtu-curriculum-parser

./: .gitignore  pyproject.toml  requirements.txt  setup.py
curriculum_parser/: _pdf_parser.py  _web_parser.py  constants.py  education_plan_discipline.py  education_plan_file.py  parser.py
examples/: db.py  main.py
examples/models/: base.py  control_form.py  discipline.py  discipline_name.py  education_direction.py  education_plan.py  user.py
tests/: test_curriculum_parser.py
